--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>О компании</title>
 </head>
 <body>
+    <a href="https://leonid-kosch.github.io/adidas_shop/" class="back-button">❮Назад</a>
     <div class="about-company-wrapper">
         <div class="about-company">
             <h1>
@@ -26,7 +27,7 @@
                     <img src="./img/90f8407c1bdeea70855e92cd46886fb8.png" alt="">
                 </div>
             </div>
-            <a href="https://estafeta.com.ua/articles/17.istoriya_brenda_adidas#:~:text=История%20Adidas%20началась%20в%2020,Дасслер»%20-%20эталон%20немецкой%20обуви." target="_blank">Подробнее</a>
+            <a href="https://street-beat.ru/blog/adidas-history/" target="_blank">Подробнее</a>
         </div>
     </div>
 </body>
